2007-03-08  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (findmagictag): Cast node->data before doing arithmetic
	since it's now (void *).

2007-03-05  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (RCS_delete_revs): When checking for tagged revisions,
	include magic branch tags.

2007-03-01  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend_dir): Correct error message.
	* sanity.sh (pserver-3a): New test.

2006-12-18  Mark D. Baushke  <mdb@gnu.org>

	* cvs.h (checksum_t): New typedef union for md5 checksum
	alignment.
	* client.c (stored_checksum, handle_checksum, update_entires):
          Use it.
	* update.c (update_fileproc): Ditto.
	(struct patch_file_data): Use bool for compute_checksum flag.
	(patch_file): Update compute_checksum assignments to bool.

2006-09-21  Mark D. Baushke  <mdb@gnu.org>

	* commit.c (commit_fileproc): If support for the old info format
	strings is removed, then the block should always be run, not just
	when ci->status is not T_REMOVED.
	(Patch from "C. Michael Pilato" <cmpilato@collab.net>)

2006-09-15  Derek Price  <derek@ximbiot.com>

	* error.c (error): Remove errant comment.

	* server.c (pserver_authenticate_connection): Don't call error (1, ...)
	where code is expected to execute afterwards.

	Clean up repetitive server error handling code.
	* server.c (pending_msg, push_pending_error, push_pending_warning): New
	functions.
	(alloc_pending, alloc_pending_warning): Remove these functions.
	(*): Update all callers.

2006-09-14  Derek Price  <derek@ximbiot.com>

	* sanity.sh (server3, client2): New tests.

2006-09-12  Derek Price  <derek@ximbiot.com>

	* commit.c (precommit_list_to_args_proc, precommit_proc): Output tag
	for commitinfo line when requested.
	* sanity.sh (info): Add tests for this.

2006-09-07  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve comments.  Restore repaired error
	handling.

2006-09-06  Larry Jones  <lawrence.jones@ugs.com>
